# picamif

./: .cproject  .gitignore  .project  autogen.sh  configure.ac  dependencies.txt
scripts/: redshirt.sh
scripts/ftpReceiverViewer/: README  ftpDisplay.cmd  ftpDisplay.sh  stulpViewer.py
scripts/gphotoSender/: engageGphoto  ftpUpload  init
scripts/gphotoSenderLegacy/: picam_script
scripts/install/: ftpUpload.cmd  ftpUpload.conf  installer
scripts/webInterface/: index.php
src/: Main.cpp  Makefile.am  PhotoCamera.cpp  PhotoCamera.h  cam.c  cam.h  http.c  http.h  main.c  main.cpp  main.h  strings.c  strings.h
